--- a/sass/pages/_provider-profile.scss
+++ b/sass/pages/_provider-profile.scss
@@ -44,18 +44,55 @@
         border-radius: 50%;
         position: absolute;
         bottom: -11rem;left: 5rem;
+
+        @media only screen and (max-width: 992px) {
+            height: 14rem;
+            width: 14rem;
+            bottom: -7rem;
+        }
+    }
+    &__logo {
+        position: absolute;
+        top: 7.5rem;right: 10rem;
+        height: 15rem;
+        width: 15rem;
+        border-radius: 1rem;
+        overflow: hidden;
+        padding: 3rem;
+        backdrop-filter: blur(10px);
+        background-color: rgba(255, 255, 255, 0.3);
+        
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
     }
     &__info {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        // align-items: center;
         padding: 5rem;
         background-color: white;
         height: 17rem;
+
+        @media only screen and (max-width: 992px) {
+            padding: 7rem 5rem;
+        }
+        @media only screen and (max-width: 768px) {
+            gap: 2rem;
+        }
     }
     &__name {
         font-size: 5rem;
         padding-left: 27rem;
+        white-space: nowrap;
+        @media only screen and (max-width: 992px) {
+            padding-left: 0;
+        }
+        @media only screen and (max-width: 768px) {
+            font-size: 3rem;
+        }
     }
     &__contact-button {
         background: rgb(207,196,255);
@@ -67,19 +104,26 @@
         padding: 1rem 3rem;
         height: 4rem;
         width: 20rem;
+        @media only screen and (max-width: 768px) {
+            width: fit-content;
+        }
     }
 }
 
+.provider_profile__content // * zone contente
+{
+    display: flex;
+    gap: 5rem;
+    flex-wrap: nowrap;
+
+    @media only screen and (max-width: 1155px) {
+        flex-flow: column;
+    }
+}
 .provider_profile // * zone menu
 {
-    &__content {
-        display: flex;
-        gap: 5rem;
-        flex-wrap: nowrap;
-    }
-
     &__menu {
-        flex-basis: 30rem;
+        flex: 0 1 30rem;
         max-width: 30rem;
         background-color: white;
         overflow: hidden;
@@ -87,15 +131,35 @@
         border-radius: 1rem;
         height: 55rem;
 
+        @media only screen and (max-width: 1155px) {
+            max-width: 106rem;
+        }
+        @media only screen and (max-width: 1155px) {
+            flex: content;
+        }
         > header {
             padding: 2.5rem;
             text-align: center;
             color: #D5D5D5;
             background-color: #434343;
+            font-size: 2rem;
         }
     }
     &__menu-details {
         padding: 3rem;
+        
+        @media only screen and (max-width: 1155px) {
+            display: flex;
+            gap: 3rem;
+        }
+        @media only screen and (max-width: 630px) {
+            flex-flow: column;
+        }
+    }
+    &__menu-items-wrapper {
+        @media only screen and (max-width: 1155px) {
+
+        }
     }
     &__menu-item {
         display: flex;
@@ -107,6 +171,9 @@
         gap: 1rem;
         margin-top: 2rem;
 
+        @media only screen and (max-width: 1155px) {
+            width: 23rem;
+        }
         p {
             background-color: aliceblue;
             border-radius: 1rem;
@@ -119,9 +186,15 @@
     &__menu-description {
         text-align: justify;
         margin-top: 2rem;
+
+        @media only screen and (max-width: 1155px) {
+            margin-top: 0;
+            padding: 0 .5rem;
+            flex: auto;
+        }
     }
 }
-.provider_profile // * zone content
+.provider_profile // * zone list
 {
     &__services-list {
         flex: auto;
@@ -130,13 +203,28 @@
         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
         border-radius: 1rem;
         max-width: 1090px;
-        padding: 3rem 0;
+        padding: 3rem;
+
+
     }
     &__services-list__container {
         display: flex;
         gap: 3rem;
         flex-wrap: wrap;
         margin: auto;
-        max-width: 1010px;
+        max-width: 101rem;
+
+        @media only screen and (max-width: 1500px) {
+            max-width: 66.5rem;
+        }
+        @media only screen and (max-width: 1155px) {
+            max-width: 100.8rem;
+        }
+        @media only screen and (max-width: 1147px) {
+            max-width: 66.5rem;
+        }
+        @media only screen and (max-width: 1147px) {
+            max-width: 31rem;
+        }
     }
 }
