--- a/sass/pages/_settings.scss
+++ b/sass/pages/_settings.scss
@@ -50,6 +50,25 @@
                 }
             }
         }
+        .user-settings__form-logo {
+            position: relative;
+            
+            background: rgb(207,196,255);
+            background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+            border: solid 1px white;
+            border-radius: .5rem;
+            padding: .5rem 0;
+            text-align: center;
+
+            .file-logo {
+                cursor: pointer;
+            }
+            input[type="file"] {
+                position: absolute;
+                left: -99999px;
+            }
+        }
 
         .user-settings__menu-item,
         .user-settings__logout-btn {
@@ -97,6 +116,10 @@
         flex: auto;
         padding: 5rem; 
 
+        @media only screen and (max-width: 1140px) {
+            padding: 5rem 5rem 5rem 0;
+        }
+
         h2 {
             border-bottom: 2px solid #ccc;
             padding-bottom: 2rem;
@@ -107,6 +130,10 @@
             gap: 2rem;
             padding: 2rem 0;
             border-bottom: 2px solid #ccc;
+
+            @media only screen and (max-width: 910px) {
+                flex-flow: column;
+            }
 
             .user-settings__section-label {
                 flex: 1;
@@ -119,12 +146,22 @@
                 display: flex;
                 flex-flow: column;
                 gap: 1rem;
+                @media only screen and (max-width: 1140px) {
+                    flex: 1 1 50rem;
+                }
+                @media only screen and (max-width: 910px) {
+                    flex: auto;
+                }
             }
 
             .user-settings__input-group {
                 display: flex;
                 gap: 2rem;
                 white-space: nowrap;
+
+                @media only screen and (max-width: 910px) {
+                    flex-wrap: wrap;
+                }
 
                 .user-settings__input-field {
                     flex: 1;
@@ -159,11 +196,3 @@
 
 }
 
-/* 
-            @media only screen and (max-width: 680px) {
-                flex-flow: column;
-                padding: 5rem 0;
-                text-align: center;
-                gap: 2rem;
-            }
-*/
