--- a/sass/partials/_card-provider-featured.scss
+++ b/sass/partials/_card-provider-featured.scss
@@ -28,6 +28,16 @@
             border-radius: 50%;
             background-color: #2d7fba;
             overflow: hidden;
+            display: flex;
+            align-items: center;
+            place-content: center;
+            font-size: 5rem;
+            color: white;
+
+            span {
+                padding-top: 1rem;
+                line-height: .9;
+            }
         }
     }
 
