--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -28,7 +28,7 @@
             h2 {
                 font-size: 3rem;
                 margin-bottom: 3rem;
-                text-transform: capitalize;
+                font-weight: 300;
 
                 @media only screen and (max-width: 680px) {
                     margin-bottom: 1rem;
