--- a/templates/parameter/parameter.html.twig
+++ b/templates/parameter/parameter.html.twig
@@ -7,18 +7,25 @@
     <script src="{{ asset('js/ajax_adresse_setting.js') }}" defer></script>
 {% endblock %}
 
+{% if app.user.internetUsers is defined and app.user.internetUsers is not null %}
+    {% set id = app.user.internetUsers.id %}
+{% endif %}
+{% if app.user.providers is defined and app.user.providers is not null %}
+    {% set id = app.user.providers.id %}
+{% endif %}
+
 {% block body %}
 <main class="user-settings">
     <div class="user-settings__container">
 
         <section class="user-settings__menu">
             <h2 class="user-settings__menu-title">User profile</h2>
-            <form action="{{ path('app_parameter_user_info', {id: app.user.id}) }}" method="post" enctype="multipart/form-data" class="user-settings__profile-photo" id="profile-photo-form">
+            <form action="{{ path('app_parameter_user_info', {id: id}) }}" method="post" enctype="multipart/form-data" class="user-settings__profile-photo" id="profile-photo-form">
                 {% if app.user %}
-                    {% if app.user.providers.images is defined  %}
-                        {% set name_image = app.user.providers.images.first.name ? app.user.providers.images.first.name %}
+                    {% if app.user.providers.providerPhoto is defined and app.user.providers.providerPhoto is not null %}
+                        {% set name_image = app.user.providers.providerPhoto.name ? app.user.providers.providerPhoto.name %}
                     {% endif %}
-                    {% if app.user.internetUsers.images is defined  %}
+                    {% if app.user.internetUsers.images is defined and app.user.internetUsers.images is not null %}
                         {% set name_image = app.user.internetUsers.images.name ? app.user.internetUsers.images.name %}
                     {% endif %}
                 {% endif %}
@@ -30,20 +37,26 @@
                         <img src="{{ asset('assets/uploads/providers/' ~ name_image) }}" alt="">
                     {% endif %}
                 {% else %}
-                    <span>
-                        {{ app.user.userType == 'InternetUsers' ? app.user.internetUsers|slice(0, 1)|upper : app.user.providers|slice(0, 1)|upper }}
-                    </span>
+                    <img src="{{ asset('assets/uploads/profil-picture-neutre.jpg') }}" alt="">
                 {% endif %}
                 
                 <label class="btn-file">
                     {{ include('svg/edit.html.twig') }}
                     {{ form_widget(photoForm.name, {'id': 'upload-input'}) }}
                 </label>
-                <button>
-                    ok
-                </button>
                 {{ form_widget(photoForm._token) }}
             </form>
+
+            {% if app.user.providers is defined and app.user.providers is not null %}
+            <form action="{{ path('app_parameter_logo', {id: id}) }}" method="post" enctype="multipart/form-data" class="user-settings__form-logo" id="profile-logo-form">
+                <label class="file-logo">
+                    Ajouter un logo
+                    {{ form_widget(logoForm.name, {'id': 'upload-logo'}) }}
+                </label>
+                {{ form_widget(logoForm._token) }}
+            </form>
+            {% endif %}
+
             {% set current_route = app.request.attributes.get('_route') %}
             <ul class="user-settings__menu-list">
                 <li class="user-settings__menu-item {{ (current_route == 'app_parameter_user_info') ? 'active' : '' }}">
@@ -70,7 +83,7 @@
         </section>
         
         <section class="user-settings__content">
-            <form action="{{ path('app_parameter_user_info', {id: app.user.id}) }}" method="post" class="user-settings__form">
+            <form action="{{ path('app_parameter_user_info', {id: id}) }}" method="post" class="user-settings__form" id="user-settings__form-profile">
                 <div class="user-settings__header">
                     <h2 class="user-settings__header-title">Edit Profile</h2>
                 </div>
@@ -93,37 +106,37 @@
                         </div>
 
                         {% if app.user.userType is defined %}
-                            {% if app.user.userType == 'Provider' %}
-                            <div class="user-settings__input-group">
-                                <div class="user-settings__input-field">
-                                    {{ form_label(userTypeForm.tvaNumber, 'TVA') }}
-                                    {{ form_widget(userTypeForm.tvaNumber, {'attr': {'placeholder': 'Entrez votre numéro de TVA'}}) }}
+                            {% if app.user.userType == 'Providers' %}
+                                <div class="user-settings__input-group">
+                                    <div class="user-settings__input-field">
+                                        {{ form_label(userTypeForm.tvaNumber, 'TVA') }}
+                                        {{ form_widget(userTypeForm.tvaNumber, {'attr': {'placeholder': 'Entrez votre numéro de TVA'}}) }}
+                                    </div>
+                                    <div class="user-settings__input-field">
+                                        {{ form_label(userTypeForm.phoneNumber, 'Phone number') }}
+                                        {{ form_widget(userTypeForm.phoneNumber, {'attr': {'placeholder': 'Entrez votre numéro de telephone'}}) }}
+                                    </div>
                                 </div>
-                                <div class="user-settings__input-field">
-                                    {{ form_label(userTypeForm.phoneNumber, 'Phone number') }}
-                                    {{ form_widget(userTypeForm.phoneNumber, {'attr': {'placeholder': 'Entrez votre numéro de telephone'}}) }}
+                                <div class="user-settings__input-group">
+                                    <div class="user-settings__input-field">
+                                        {{ form_label(userTypeForm.websiteUrl, 'TVA') }}
+                                        {{ form_widget(userTypeForm.websiteUrl, {'attr': {'placeholder': 'Entrez votre compte web site'}}) }}
+                                    </div>
+                                    <div class="user-settings__input-field">
+                                        {{ form_label(userTypeForm.facebook, 'Phone number') }}
+                                        {{ form_widget(userTypeForm.facebook, {'attr': {'placeholder': 'Entrez votre compte facebook'}}) }}
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="user-settings__input-group">
-                                <div class="user-settings__input-field">
-                                    {{ form_label(userTypeForm.websiteUrl, 'TVA') }}
-                                    {{ form_widget(userTypeForm.websiteUrl, {'attr': {'placeholder': 'Entrez votre compte web site'}}) }}
+                                <div class="user-settings__input-group">
+                                    <div class="user-settings__input-field">
+                                        {{ form_label(userTypeForm.instagram, 'TVA') }}
+                                        {{ form_widget(userTypeForm.instagram, {'attr': {'placeholder': 'Entrez votre compte instagram'}}) }}
+                                    </div>
+                                    <div class="user-settings__input-field">
+                                        {{ form_label(userTypeForm.twitter, 'Phone number') }}
+                                        {{ form_widget(userTypeForm.twitter, {'attr': {'placeholder': 'Entrez votre compte twitter'}}) }}
+                                    </div>
                                 </div>
-                                <div class="user-settings__input-field">
-                                    {{ form_label(userTypeForm.facebook, 'Phone number') }}
-                                    {{ form_widget(userTypeForm.facebook, {'attr': {'placeholder': 'Entrez votre compte facebook'}}) }}
-                                </div>
-                            </div>
-                            <div class="user-settings__input-group">
-                                <div class="user-settings__input-field">
-                                    {{ form_label(userTypeForm.instagram, 'TVA') }}
-                                    {{ form_widget(userTypeForm.instagram, {'attr': {'placeholder': 'Entrez votre compte instagram'}}) }}
-                                </div>
-                                <div class="user-settings__input-field">
-                                    {{ form_label(userTypeForm.twitter, 'Phone number') }}
-                                    {{ form_widget(userTypeForm.twitter, {'attr': {'placeholder': 'Entrez votre compte twitter'}}) }}
-                                </div>
-                            </div>
                             {% endif %}
                             {% if app.user.userType == 'InternetUser' %}
                                 
