--- a/templates/partials/_card-provider-featured.html.twig
+++ b/templates/partials/_card-provider-featured.html.twig
@@ -1,7 +1,7 @@
 {% for provider in providers %}
 
-    {% if provider.images is defined %}
-        {% set name_image = provider.images.first ? provider.images.first %}
+    {% if provider.providerPhoto is defined %}
+        {% set name_image = provider.providerPhoto.name ? provider.providerPhoto.name %}
     {% endif %}
 
     <div class="card-provider-featured">
@@ -16,7 +16,7 @@
             </p>
             <div class="provider-featured-image">
                 {% if name_image is defined %}
-                    <img src="{{ asset('assets/uploads/providers/' ~ provider.images.first) }}" alt="">
+                    <img src="{{ asset('assets/uploads/providers/' ~ name_image) }}" alt="">
                 {% else %}
                     <span>{{ provider|slice(0, 1)|upper }}</span>
                 {% endif %}
@@ -24,16 +24,24 @@
         </div>
         <div class="provider-featured-details">
             <div class="provider-featured-social-icons">
-                <a href="{{ provider.websiteUrl }}">{{ include('svg/websiteUrl.html.twig') }}</a>
-                <a href="{{ provider.instagram }}">{{ include('svg/instagram.html.twig') }}</a>
-                <a href="{{ provider.facebook }}">{{ include('svg/facebook.html.twig') }}</a>
-                <a href="{{ provider.twitter }}">{{ include('svg/twitter.html.twig') }}</a>
+                {% if providers.websiteUrl is defined %}
+                <a href="{{ providers.websiteUrl }}">{{ include('svg/websiteUrl.html.twig') }}</a>
+            {% endif %}
+            {% if providers.instagram is defined %}
+                <a href="{{ providers.instagram }}">{{ include('svg/instagram.html.twig') }}</a>
+            {% endif %}
+            {% if providers.facebook is defined %}
+                <a href="{{ providers.facebook }}">{{ include('svg/facebook.html.twig') }}</a>
+            {% endif %}
+            {% if providers.twitter is defined %}
+                <a href="{{ providers.twitter }}">{{ include('svg/twitter.html.twig') }}</a>
+            {% endif %}
             </div>
             <p class="provider-featured-description">
                 {{ provider.description|length > 130 ? provider.description|slice(0, 130) ~ '...' : provider.description }}
             </p>
             <button class="provider-featured-service-button">
-                <a href="">En savoir plus</a>
+                <a href="{{ path('app_providers_profile', {id: provider.id}) }}">En savoir plus</a>
             </button>
         </div>
     </div>
