--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -1,6 +1,7 @@
 @use 'header';
 @use 'search-bar';
 @use 'verif';
+@use 'modal';
 @use 'card-promo';
 @use 'card-internship';
 @use 'card-provider';
