--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1495,6 +1495,7 @@
 
 .dashboard {
   background-color: #F3F2FF;
+  color: #647688;
   font-size: 1.4rem;
 }
 .dashboard__container {
@@ -1621,6 +1622,39 @@
 }
 .dashboard__content-section .dashboard__main-content tbody td {
   padding: 0.5rem 0 0.5rem 2rem;
+}
+.dashboard__content-section .dashboard__main-content tbody tr td:last-of-type {
+  position: relative;
+}
+.dashboard__content-section .dashboard__main-content tbody tr td:last-of-type ul {
+  display: none;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  position: absolute;
+  top: -1rem;
+  left: 6rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  gap: 1rem;
+}
+.dashboard__content-section .dashboard__main-content tbody tr td:last-of-type ul li {
+  height: 3rem;
+  width: 6rem;
+  display: flex;
+  align-items: center;
+  place-content: center;
+  border-radius: 0.5rem;
+}
+.dashboard__content-section .dashboard__main-content tbody tr td:last-of-type ul li:hover {
+  background-color: #F3F5F8;
+}
+.dashboard__content-section .dashboard__main-content tbody tr td:last-of-type ul input {
+  background-color: inherit;
+  border: none;
+  color: #647688;
+}
+.dashboard__content-section .dashboard__main-content tbody tr td:last-of-type span.active + ul {
+  display: flex;
 }
 .dashboard__content-section .dashboard__main-content .dashboard__form {
   display: flex;
@@ -2181,6 +2215,38 @@
 }
 .verif a {
   color: #00B8FF;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal.active {
+  display: flex;
+}
+.modal .modal__container {
+  background-color: #fefefe;
+  margin: 15% auto;
+  border-radius: 1rem;
+  padding: 3rem;
+  display: flex;
+  gap: 1rem;
+  height: fit-content;
+}
+.modal .modal__container > div {
+  display: flex;
+  gap: 1rem;
+  border: solid 1px #ccc;
+  border-radius: 1rem;
+  padding: 2rem;
+  background-color: #e8e5e5;
 }
 
 .card-service {
