--- a/templates/partials/_card-promo.html.twig
+++ b/templates/partials/_card-promo.html.twig
@@ -1,10 +1,22 @@
 {% for service in services %}
+{% set now = "now"|date('Y-m-d') %}
+{% set displayUntil = service.getDisplayUntilDate|date('Y-m-d') %}
+{% if now > displayUntil %}
+    {% set className = 'disabled' %}
+{% else %}
+    {% set className = '' %}
+{% endif %}
 
 {% if service.providers.providerPhoto is defined %}
     {% set name_image = service.providers.providerPhoto.name ? service.providers.providerPhoto.name %}
 {% endif %}
 
-    <div class="card-service">
+    <div class="card-service {{ className }}">
+        {% if now > displayUntil %}
+            <div class="sold-out">
+                <img src="{{ asset('assets/uploads/sold-out.png') }}" alt="">
+            </div>
+        {% endif %}
         <div class="card-service__header">
             <div class="card-service__profile-image">
                 {% if name_image is defined %}
@@ -56,7 +68,7 @@
                 {{ service.description|length > 90 ? service.description|slice(0, 90) ~ '...' : service.description }}
             </p>
             <button class="card-service__button">
-                <a href="{{ path('app_services_description', {id: service.id}) }}">En savoir plus</a>
+                <a href="{{ path('app_services_description', {id: service.id}) }}" class=" {{ className }}">En savoir plus</a>
             </button>
         </div>
     </div>
