--- a/templates/providers/provider-profile.html.twig
+++ b/templates/providers/provider-profile.html.twig
@@ -49,7 +49,7 @@
                         </div>
                         <div class="provider_profile__menu-item">
                             <p class="provider_profile__menu-label">Adresse : </p>
-                            <p class="provider_profile__menu-value">{{ providers.users.first.addressStreet }} {{ providers.users.first.addressStreet }}, {{ providers.users.first.postalCode }} {{ providers.users.first.locality }}</p>
+                            <p class="provider_profile__menu-value">{{ providers.users.first.addressStreet }} {{ providers.users.first.adressNumber }}, <br>{{ providers.users.first.postalCode }} {{ providers.users.first.locality }}</p>
                         </div>
                         <div class="provider_profile__menu-item">
                             <p class="provider_profile__menu-label">Tel : </p>
