--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -371,12 +371,12 @@
   background: rgb(207, 196, 255);
   background: linear-gradient(90deg, rgb(207, 196, 255) 0%, rgb(162, 211, 245) 100%);
   border-radius: 1rem;
-  border: solid 1px white;
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   padding: 12.5px 25px;
   display: inline-block;
   margin-bottom: 40px;
+  border: solid 1px white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .hero .hero-featured__container a:hover {
   background: rgb(218, 234, 245);
@@ -957,7 +957,7 @@
   overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   border-radius: 1rem;
-  height: 55rem;
+  height: fit-content;
 }
 @media only screen and (max-width: 1155px) {
   .provider_profile__menu {
@@ -1497,6 +1497,7 @@
   background-color: #F3F2FF;
   color: #647688;
   font-size: 1.4rem;
+  min-height: 100vh;
 }
 .dashboard__container {
   max-width: 1440px;
@@ -1526,8 +1527,18 @@
   gap: 3rem;
   flex-wrap: nowrap;
 }
+@media only screen and (max-width: 992px) {
+  .dashboard__content-section {
+    flex-flow: column;
+  }
+}
 .dashboard__content-section .dashboard__menu {
   flex: 0 1 25rem;
+}
+@media only screen and (max-width: 992px) {
+  .dashboard__content-section .dashboard__menu {
+    flex: content;
+  }
 }
 .dashboard__content-section .dashboard__menu .dashboard__menu-title {
   font-size: 2rem;
@@ -1544,13 +1555,24 @@
   border-radius: 1rem;
   padding: 2rem;
 }
+@media only screen and (max-width: 992px) {
+  .dashboard__content-section .dashboard__menu .dashboard__menu-items {
+    flex-flow: row;
+  }
+}
 .dashboard__content-section .dashboard__menu .dashboard__menu-items a {
   display: flex;
   align-items: center;
   border-radius: 1rem;
   padding-left: 1rem;
 }
-.dashboard__content-section .dashboard__menu .dashboard__menu-items a:hover {
+@media only screen and (max-width: 992px) {
+  .dashboard__content-section .dashboard__menu .dashboard__menu-items a {
+    width: 20rem;
+  }
+}
+.dashboard__content-section .dashboard__menu .dashboard__menu-items a:hover,
+.dashboard__content-section .dashboard__menu .dashboard__menu-items a.active {
   background-color: #F3F5F8;
   color: #5D4E91;
 }
@@ -1582,10 +1604,17 @@
   align-items: center;
   place-content: center;
   width: 20rem;
-  padding: 0.5rem;
+  height: 4rem;
   border-radius: 1rem;
   background: rgb(207, 196, 255);
   background: linear-gradient(90deg, rgb(207, 196, 255) 0%, rgb(162, 211, 245) 100%);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  cursor: pointer;
+  border: solid 1px white;
+}
+.dashboard__content-section .dashboard__main-content .dashboard__content-button a:hover {
+  background: rgb(218, 234, 245);
+  background: linear-gradient(180deg, rgb(218, 234, 245) 0%, rgb(234, 231, 247) 100%);
 }
 .dashboard__content-section .dashboard__main-content table {
   width: 100%;
@@ -1637,6 +1666,11 @@
   padding: 0.5rem;
   gap: 1rem;
 }
+@media only screen and (max-width: 1300px) {
+  .dashboard__content-section .dashboard__main-content tbody tr td:last-of-type ul {
+    left: -3rem;
+  }
+}
 .dashboard__content-section .dashboard__main-content tbody tr td:last-of-type ul li {
   height: 3rem;
   width: 6rem;
@@ -1656,14 +1690,28 @@
 .dashboard__content-section .dashboard__main-content tbody tr td:last-of-type span.active + ul {
   display: flex;
 }
+.dashboard__content-section .dashboard__main-content tbody td {
+  width: 12rem;
+}
+.dashboard__content-section .dashboard__main-content tbody td:nth-of-type(5) {
+  width: 5rem;
+}
+.dashboard__content-section .dashboard__main-content tbody td:last-of-type {
+  width: 16rem;
+}
 .dashboard__content-section .dashboard__main-content .dashboard__form {
   display: flex;
   flex-flow: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 .dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
+}
+@media only screen and (max-width: 710px) {
+  .dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group {
+    flex-wrap: wrap;
+  }
 }
 .dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group select {
   background-color: white;
@@ -1674,13 +1722,42 @@
 .dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group #promotions_form_service {
   flex: auto;
 }
-.dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group .input-titre,
+.dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group input,
 .dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group .input-textarea {
   flex: auto;
-  padding: 0.5rem 1rem;
+  padding: 0.7rem 1rem;
   background-color: white;
   border: solid 1px #DBE2E8;
   border-radius: 0.5rem;
+}
+.dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group label {
+  white-space: nowrap;
+}
+.dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group > p {
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+}
+.dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-group > p:first-of-type {
+  flex: 4;
+}
+.dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-actions {
+  display: flex;
+  place-content: flex-end;
+}
+.dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-actions button {
+  border-radius: 1rem;
+  background: rgb(207, 196, 255);
+  background: linear-gradient(90deg, rgb(207, 196, 255) 0%, rgb(162, 211, 245) 100%);
+  border: solid 1px white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  cursor: pointer;
+  height: 4rem;
+  width: 14rem;
+}
+.dashboard__content-section .dashboard__main-content .dashboard__form .dashboard__form-actions button:hover {
+  background: rgb(218, 234, 245);
+  background: linear-gradient(180deg, rgb(218, 234, 245) 0%, rgb(234, 231, 247) 100%);
 }
 
 .site-header {
@@ -2249,12 +2326,18 @@
   background-color: #e8e5e5;
 }
 
+.sold-out {
+  position: absolute;
+  top: 2rem;
+}
+
 .card-service {
   flex: 0 1 31.5rem;
   border-radius: 1rem;
   background-color: white;
   box-shadow: rgb(223, 233, 245) 0px 10px 10px;
   padding: 2rem;
+  position: relative;
 }
 .card-service .card-service__header {
   display: flex;
@@ -2354,6 +2437,7 @@
   padding: 2rem;
   display: flex;
   flex-flow: column;
+  position: relative;
 }
 .card-internship__header {
   display: flex;
