--- a/sass/pages/_dashboard.scss
+++ b/sass/pages/_dashboard.scss
@@ -2,6 +2,7 @@
     background-color: #F3F2FF;
     color: #647688;
     font-size: 1.4rem;
+    min-height: 100vh;
 
     &__container {
         max-width: 1440px;
@@ -33,8 +34,16 @@
         gap: 3rem;
         flex-wrap: nowrap;
 
+        @media only screen and (max-width: 992px) {
+            flex-flow: column;
+        }
+
         .dashboard__menu {
             flex: 0 1 25rem;
+
+            @media only screen and (max-width: 992px) {
+                flex: content;
+            }
 
             .dashboard__menu-title {
                 font-size: 2rem;
@@ -52,13 +61,21 @@
                 border-radius: 1rem;
                 padding: 2rem;
 
+                @media only screen and (max-width: 992px) {
+                    flex-flow: row;
+                }
                 a {
                     display: flex;
                     align-items: center;
                     border-radius: 1rem;
                     padding-left: 1rem;
+
+                    @media only screen and (max-width: 992px) {
+                        width: 20rem;
+                    }
                 }
-                a:hover {
+                a:hover,
+                a.active {
                     background-color: #F3F5F8;
                     color: #5D4E91;
                 }
@@ -92,10 +109,18 @@
                 align-items: center;
                 place-content: center;
                 width: 20rem;
-                padding: .5rem;
+                height: 4rem;
                 border-radius: 1rem;
                 background: rgb(207,196,255);
                 background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+                box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+                cursor: pointer;
+                border: solid 1px white;
+
+                &:hover {
+                    background: rgb(218,234,245);
+                    background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
+                }
             }
             table {
                 width: 100%;
@@ -151,6 +176,10 @@
                         padding: .5rem;
                         gap: 1rem;
 
+                        @media only screen and (max-width: 1300px) {
+                            left: -3rem;
+                        }
+
                         li {
                             height: 3rem;
                             width: 6rem;
@@ -173,15 +202,30 @@
                         display: flex;
                     }
                 }
+                td {
+                    width: 12rem;
+                }
+                td:nth-of-type(5) {
+                    width: 5rem;
+                }
+                td:last-of-type {
+                    width: 16rem;
+                }
             }
 
             .dashboard__form {
                 display: flex;
                 flex-flow: column;
-                gap: 1rem;
+                gap: 2rem;
+
                 .dashboard__form-group {
                     display: flex;
-                    gap: 1rem;
+                    gap: 2rem;
+
+                    @media only screen and (max-width: 710px) {
+                        flex-wrap: wrap;
+                        // flex-direction: row-reverse;
+                    }
 
                     select {
                         background-color: white;
@@ -192,13 +236,46 @@
                     #promotions_form_service {
                         flex: auto;
                     }
-                    .input-titre,
+                    input,
                     .input-textarea {
                         flex: auto;
-                        padding: .5rem 1rem;
+                        padding: .7rem 1rem;
                         background-color: white;
                         border: solid 1px #DBE2E8;
                         border-radius: .5rem;
+                    }
+                    label {
+                        // padding-left: 1rem;
+                        white-space: nowrap;
+                    }
+                    > p {
+                        display: flex;
+                        flex-flow: column;
+                        gap: 1rem;
+                    }
+                    > p:first-of-type {
+                        flex: 4;
+                    }
+                }
+
+                .dashboard__form-actions {
+                    display: flex;
+                    place-content: flex-end;
+
+                    button {
+                        border-radius: 1rem;
+                        background: rgb(207,196,255);
+                        background: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+                        border: solid 1px white;
+                        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+                        cursor: pointer;
+                        height: 4rem;
+                        width: 14rem;
+
+                        &:hover {
+                            background: rgb(218,234,245);
+                            background: linear-gradient(180deg, rgba(218,234,245,1) 0%, rgba(234,231,247,1) 100%);
+                        }
                     }
                 }
             }
