--- a/sass/pages/_provider-profile.scss
+++ b/sass/pages/_provider-profile.scss
@@ -129,7 +129,7 @@
         overflow: hidden;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
         border-radius: 1rem;
-        height: 55rem;
+        height: fit-content;
 
         @media only screen and (max-width: 1155px) {
             max-width: 106rem;
