--- a/templates/parameter/parameter.html.twig
+++ b/templates/parameter/parameter.html.twig
@@ -37,7 +37,7 @@
                         <img src="{{ asset('assets/uploads/providers/' ~ name_image) }}" alt="">
                     {% endif %}
                 {% else %}
-                    <img src="{{ asset('assets/uploads/profil-picture-neutre.jpg') }}" alt="">
+                    <img src="{{ asset('assets/uploads/user.jpg') }}" alt="">
                 {% endif %}
                 
                 <label class="btn-file">
